--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   },
   "author": "Reed Wilson",
   "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.13.1"
+  "dependencies": {},
+  "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "gulp": "^3.9.1",
+    "path": "^0.12.7",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0"
   }
 }
